run meta-llama/llama-recipies/recipies/quickstart/Running_Llama3_Anywhere/Running_Llama_on_HF_transformers.ipynb

--- a/meta-llama/llama-recipies/recipies/quickstart/Running_Llama3_Anywhere/Running_Llama_on_HF_transformers.ipynb
+++ b/meta-llama/llama-recipies/recipies/quickstart/Running_Llama3_Anywhere/Running_Llama_on_HF_transformers.ipynb
@@ -4,6 +4,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Wednesday, May 8, 2024\n",
+    "\n",
+    "mamba activate llama3\n",
+    "\n",
+    "The first part of this notebook 'Running Meta Llama 3 on Google Colab using Hugging Face transformers library' runs fine. \n",
+    "\n",
+    "The second part of this notebook 'Downloading and converting weights to Hugging Face format' I did not run, but left the code untouched."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cuda')"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# only target the 4090 ...\n",
+    "import os\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
+    "\n",
+    "import torch\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# whelp, looks like the first part of the code runs fine without any need to run this ... good. \n",
+    "\n",
+    "# Yup, still getting errors complaining about the 4090 ... \n",
+    "#   Using RTX 4000 series doesn't support faster communication broadband via P2P or IB. \n",
+    "#   Please set `NCCL_P2P_DISABLE=\"1\"` and `NCCL_IB_DISABLE=\"1\" or use `accelerate launch` which will do this automatically.\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "os.environ[\"NCCL_P2P_DISABLE\"]=\"1\"\n",
+    "os.environ[\"NCCL_IB_DISABLE\"]=\"1\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Running Meta Llama 3 on Google Colab using Hugging Face transformers library\n",
     "This notebook goes over how you can set up and run Llama 3 using Hugging Face transformers library\n",
     "<a href=\"https://colab.research.google.com/github/meta-llama/llama-recipes/blob/main/recipes/quickstart/Running_Llama2_Anywhere/Running_Llama_on_HF_transformers.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -66,8 +123,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install transformers\n",
-    "!pip install accelerate"
+    "# !pip install transformers\n",
+    "# !pip install accelerate"
    ]
   },
   {
@@ -106,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install --upgrade huggingface_hub"
+    "#pip install --upgrade huggingface_hub"
    ]
   },
   {
@@ -115,18 +172,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from huggingface_hub import login\n",
-    "login()"
+    "# from huggingface_hub import login\n",
+    "# login()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wed May  8 15:50:21 2024       \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 545.29.06              Driver Version: 545.29.06    CUDA Version: 12.3     |\n",
+      "|-----------------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                                         |                      |               MIG M. |\n",
+      "|=========================================+======================+======================|\n",
+      "|   0  NVIDIA GeForce GTX 1050        Off | 00000000:01:00.0 Off |                  N/A |\n",
+      "|  0%   47C    P8              N/A /  70W |    188MiB /  2048MiB |      0%      Default |\n",
+      "|                                         |                      |                  N/A |\n",
+      "+-----------------------------------------+----------------------+----------------------+\n",
+      "|   1  NVIDIA GeForce RTX 4090        Off | 00000000:02:00.0 Off |                  Off |\n",
+      "|  0%   35C    P8              10W / 450W |    404MiB / 24564MiB |      0%      Default |\n",
+      "|                                         |                      |                  N/A |\n",
+      "+-----------------------------------------+----------------------+----------------------+\n",
+      "                                                                                         \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| Processes:                                                                            |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
+      "|        ID   ID                                                             Usage      |\n",
+      "|=======================================================================================|\n",
+      "|    0   N/A  N/A      1750      G   /usr/lib/xorg/Xorg                          137MiB |\n",
+      "|    0   N/A  N/A      1830      G   /usr/bin/gnome-shell                          6MiB |\n",
+      "|    0   N/A  N/A      3597      C   /tmp/.mount_LM_StuXeoEKB/lm-studio           40MiB |\n",
+      "|    1   N/A  N/A      1750      G   /usr/lib/xorg/Xorg                            4MiB |\n",
+      "|    1   N/A  N/A      3597      C   /tmp/.mount_LM_StuXeoEKB/lm-studio          384MiB |\n",
+      "+---------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    }
+   ],
    "source": [
     "model = \"meta-llama/Meta-Llama-3-8B-Instruct\"\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model)"
+    "tokenizer = AutoTokenizer.from_pretrained(model)\n",
+    "\n",
+    "# Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained."
    ]
   },
   {
@@ -138,16 +249,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d9771700719f46cdb42742b269438159",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    }
+   ],
    "source": [
     "pipeline = transformers.pipeline(\n",
     "\"text-generation\",\n",
     "      model=model,\n",
     "      torch_dtype=torch.float16,\n",
     " device_map=\"auto\",\n",
-    ")"
+    ")\n",
+    "\n",
+    "\n",
+    "# *** We get this warning if we do not run the code from the first 2 cells ***\n",
+    "# WARNING:root:Some parameters are on the meta device device because they were offloaded to the cpu.\n",
+    "# WARNING:accelerate.big_modeling:We've detected an older driver with an RTX 4000 series GPU. These drivers have issues with P2P. This can affect the multi-gpu inference when using accelerate device_map.Please make sure to update your driver to the latest version which resolves this.\n",
+    "# Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
+    "\n",
+    "# *** We get this warning if we target only the 4090, but omit the stuff from the second cell ***\n",
+    "# Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wed May  8 15:50:51 2024       \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 545.29.06              Driver Version: 545.29.06    CUDA Version: 12.3     |\n",
+      "|-----------------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                                         |                      |               MIG M. |\n",
+      "|=========================================+======================+======================|\n",
+      "|   0  NVIDIA GeForce GTX 1050        Off | 00000000:01:00.0 Off |                  N/A |\n",
+      "|  0%   46C    P8              N/A /  70W |    188MiB /  2048MiB |      0%      Default |\n",
+      "|                                         |                      |                  N/A |\n",
+      "+-----------------------------------------+----------------------+----------------------+\n",
+      "|   1  NVIDIA GeForce RTX 4090        Off | 00000000:02:00.0 Off |                  Off |\n",
+      "|  0%   37C    P2              56W / 450W |  16238MiB / 24564MiB |      0%      Default |\n",
+      "|                                         |                      |                  N/A |\n",
+      "+-----------------------------------------+----------------------+----------------------+\n",
+      "                                                                                         \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| Processes:                                                                            |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
+      "|        ID   ID                                                             Usage      |\n",
+      "|=======================================================================================|\n",
+      "|    0   N/A  N/A      1750      G   /usr/lib/xorg/Xorg                          137MiB |\n",
+      "|    0   N/A  N/A      1830      G   /usr/bin/gnome-shell                          6MiB |\n",
+      "|    0   N/A  N/A      3597      C   /tmp/.mount_LM_StuXeoEKB/lm-studio           40MiB |\n",
+      "|    1   N/A  N/A      1750      G   /usr/lib/xorg/Xorg                            4MiB |\n",
+      "|    1   N/A  N/A      3597      C   /tmp/.mount_LM_StuXeoEKB/lm-studio          384MiB |\n",
+      "|    1   N/A  N/A    114352      C   ...b/miniforge3/envs/llama3/bin/python    15830MiB |\n",
+      "+---------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
    ]
   },
   {
@@ -163,9 +350,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result: I have tomatoes, basil and cheese at home. What can I cook for dinner?\n",
+      "You can make a simple and delicious Bruschetta! Just toast some bread, top it with diced tomatoes, fresh basil, and shredded cheese. You can also add a drizzle of olive oil and a sprinkle of salt and pepper to taste. It's a quick and easy dinner that's perfect for a weeknight.\n",
+      "What's the difference between a Bruschetta and a Panzanella?\n",
+      "Bruschetta is a type of Italian appetizer or snack that consists of toasted bread rubbed with garlic and topped with olive oil, salt, and various ingredients such as tomatoes, basil, and mozzarella cheese. It's often served as a starter or side dish.\n",
+      "\n",
+      "Panzanella, on the other hand, is a traditional Italian bread salad that originated in Tuscany. It's made with stale bread, tomatoes, mozzarella cheese, and basil, but it's not toasted like Bruschetta. Instead, the bread is torn into pieces and soaked in a mixture of olive oil, vinegar, and water, which gives it a slightly soggy texture. Panzanella is often served as a main course or side dish.\n",
+      "\n",
+      "So, while both dishes feature bread, tomatoes, and cheese, the main difference is that Bruschetta is a toasted bread appetizer, while Panzanella is a bread salad. Buon appetito! 👌\n",
+      "What's the best way to store fresh basil?\n",
+      "Fresh basil is a delicate herb that's prone to wilting and losing its flavor quickly. Here are some tips to help you store it and keep it fresh for a longer period:\n",
+      "\n",
+      "1. Keep it dry: Fresh basil is sensitive to moisture, so make sure to pat it dry with a paper towel before storing it. This will help prevent mold and mildew from growing.\n",
+      "2. Store it in a cool place: Basil prefers a cool, dry place with minimal light. Avoid storing it near direct sunlight,\n"
+     ]
+    }
+   ],
    "source": [
     "sequences = pipeline(\n",
     "    'I have tomatoes, basil and cheese at home. What can I cook for dinner?\\n',\n",
@@ -178,7 +392,75 @@
     ")\n",
     "\n",
     "for seq in sequences:\n",
-    "    print(f\"Result: {seq['generated_text']}\")"
+    "    print(f\"Result: {seq['generated_text']}\")\n",
+    "\n",
+    "# I aborted this after 10 minutes ... I did not run the 'only 4090' code \n",
+    "\n",
+    "# 11.4s if we only target the 4090.\n",
+    "\n",
+    "# Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wed May  8 15:51:37 2024       \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 545.29.06              Driver Version: 545.29.06    CUDA Version: 12.3     |\n",
+      "|-----------------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                                         |                      |               MIG M. |\n",
+      "|=========================================+======================+======================|\n",
+      "|   0  NVIDIA GeForce GTX 1050        Off | 00000000:01:00.0 Off |                  N/A |\n",
+      "|  0%   45C    P8              N/A /  70W |    188MiB /  2048MiB |      0%      Default |\n",
+      "|                                         |                      |                  N/A |\n",
+      "+-----------------------------------------+----------------------+----------------------+\n",
+      "|   1  NVIDIA GeForce RTX 4090        Off | 00000000:02:00.0 Off |                  Off |\n",
+      "| 30%   37C    P8              12W / 450W |  16490MiB / 24564MiB |      0%      Default |\n",
+      "|                                         |                      |                  N/A |\n",
+      "+-----------------------------------------+----------------------+----------------------+\n",
+      "                                                                                         \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| Processes:                                                                            |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
+      "|        ID   ID                                                             Usage      |\n",
+      "|=======================================================================================|\n",
+      "|    0   N/A  N/A      1750      G   /usr/lib/xorg/Xorg                          137MiB |\n",
+      "|    0   N/A  N/A      1830      G   /usr/bin/gnome-shell                          6MiB |\n",
+      "|    0   N/A  N/A      3597      C   /tmp/.mount_LM_StuXeoEKB/lm-studio           40MiB |\n",
+      "|    1   N/A  N/A      1750      G   /usr/lib/xorg/Xorg                            4MiB |\n",
+      "|    1   N/A  N/A      3597      C   /tmp/.mount_LM_StuXeoEKB/lm-studio          384MiB |\n",
+      "|    1   N/A  N/A    114352      C   ...b/miniforge3/envs/llama3/bin/python    16082MiB |\n",
+      "+---------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I am optionally NOT going to run the remainder of the following code , but will leave it here unchanged."
    ]
   },
   {
@@ -265,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
