test another local Llama 3.1 langchain notebook

--- a/Llama 3.1/Llama_3.1.ipynb
+++ b/Llama 3.1/Llama_3.1.ipynb
@@ -41,158 +41,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "models--BAAI--bge-base-en\n",
+      "models--BAAI--bge-base-en-v1.5\n",
+      "models--bert-base-cased-finetuned-mrpc\n",
+      "models--bert-base-uncased\n",
+      "models--bert-large-uncased\n",
+      "models--cognitivecomputations--dolphin-2.9-llama3-8b\n",
+      "models--colbert-ir--colbertv2.0\n",
+      "models--distilbert-base-uncased-finetuned-sst-2-english\n",
+      "models--FacebookAI--xlm-roberta-base\n",
+      "models--facebook--opt-350m\n",
+      "models--google--gemma-7b\n",
+      "models--google--gemma-7b-it\n",
+      "models--google-t5--t5-base\n",
+      "models--gpt2\n",
+      "models--meta-llama--Meta-Llama-3.1-8B-Instruct\n",
+      "models--meta-llama--Meta-Llama-3-8B\n",
+      "models--meta-llama--Meta-Llama-3-8B-Instruct\n",
+      "models--microsoft--mpnet-base\n",
+      "models--microsoft--table-transformer-structure-recognition\n",
+      "models--mistralai--Mistral-7B-Instruct-v0.2\n",
+      "models--mistralai--Mistral-7B-Instruct-v0.3\n",
+      "models--mistralai--Mistral-7B-v0.1\n",
+      "models--mixedbread-ai--mxbai-embed-large-v1\n",
+      "models--nomic-ai--nomic-embed-text-v1\n",
+      "models--NousResearch--Hermes-2-Pro-Llama-3-8B\n",
+      "models--nvidia--dragon-multiturn-context-encoder\n",
+      "models--nvidia--dragon-multiturn-query-encoder\n",
+      "models--nvidia--Llama3-ChatQA-1.5-8B\n",
+      "models--roberta-base\n",
+      "models--robkayinto--OrpoLlama-3-8B\n",
+      "models--sentence-transformers--all-MiniLM-L6-v2\n",
+      "models--sentence-transformers--all-mpnet-base-v2\n",
+      "models--sentence-transformers--multi-qa-MiniLM-L6-cos-v1\n",
+      "models--sentence-transformers--paraphrase-MiniLM-L6-v2\n",
+      "models--sshleifer--distilbart-cnn-12-6\n",
+      "models--t5-base\n",
+      "models--timm--resnet18.a1_in1k\n",
+      "models--timm--resnet50.a1_in1k\n",
+      "models--timm--tf_efficientnet_b7.ns_jft_in1k\n",
+      "models--timm--vgg16.tv_in1k\n",
+      "models--unstructuredio--yolo_x_layout\n",
+      "tmp3nhy_3hy\n",
+      "tmp6zsi6_9m\n",
+      "tmp9s591511\n",
+      "tmplj5wa1yi\n",
+      "tmpluqjkx37\n",
+      "tmpopon2ynm\n",
+      "tmpxjb0xu8l\n",
+      "version.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls /home/rob/.cache/huggingface/hub"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69c78bf375ac43baba26590c3b954350",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors.index.json:   0%|          | 0.00/23.9k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcedc0d2fb88451593a490dc4dfb0d54",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading shards:   0%|          | 0/4 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78caafe0f518418cbe8a01d8cb63d367",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model-00001-of-00004.safetensors:   0%|          | 0.00/4.98G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30c8cdda8d5b448dadd88eda9f91c636",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model-00002-of-00004.safetensors:   0%|          | 0.00/5.00G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b3f5faa90ef47c19e4f0961fee9d99a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model-00003-of-00004.safetensors:   0%|          | 0.00/4.92G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c29d69efec39429d9c94293843fc670c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model-00004-of-00004.safetensors:   0%|          | 0.00/1.17G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e89ae357da14dac901f15ec9d2f98e2",
+       "model_id": "21c8fa0b5d9045118a29c6479002123e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a791b53138c48c4adef4bd3e4ea8177",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "generation_config.json:   0%|          | 0.00/184 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf4cb5d8cec34be4b5074957a7d73be0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/50.9k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c7dd384ad3444a5b5386f897774a663",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/9.09M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "190662bfffba43f5b7ede23e74b86269",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/296 [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -211,6 +146,7 @@
     "    device=\"cuda\",\n",
     ")\n",
     "\n",
+    "# 10.3s\n",
     "# 231m 16.3s\n"
    ]
   },
@@ -223,7 +159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wed Jul 24 17:15:34 2024       \n",
+      "Sat Jul 27 14:16:04 2024       \n",
       "+---------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 545.29.06              Driver Version: 545.29.06    CUDA Version: 12.3     |\n",
       "|-----------------------------------------+----------------------+----------------------+\n",
@@ -231,12 +167,12 @@
       "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
       "|                                         |                      |               MIG M. |\n",
       "|=========================================+======================+======================|\n",
-      "|   0  NVIDIA GeForce GTX 1050        Off | 00000000:01:00.0 Off |                  N/A |\n",
-      "|  0%   40C    P8              N/A /  70W |    148MiB /  2048MiB |      0%      Default |\n",
+      "|   0  NVIDIA GeForce GTX 1050        Off | 00000000:01:00.0  On |                  N/A |\n",
+      "|  0%   54C    P0              N/A /  70W |     94MiB /  2048MiB |      0%      Default |\n",
       "|                                         |                      |                  N/A |\n",
       "+-----------------------------------------+----------------------+----------------------+\n",
       "|   1  NVIDIA GeForce RTX 4090        Off | 00000000:02:00.0 Off |                  Off |\n",
-      "|  0%   35C    P8               6W / 450W |  15850MiB / 24564MiB |      0%      Default |\n",
+      "|  0%   31C    P8               5W / 450W |  15850MiB / 24564MiB |      0%      Default |\n",
       "|                                         |                      |                  N/A |\n",
       "+-----------------------------------------+----------------------+----------------------+\n",
       "                                                                                         \n",
@@ -245,10 +181,10 @@
       "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
       "|        ID   ID                                                             Usage      |\n",
       "|=======================================================================================|\n",
-      "|    0   N/A  N/A      1753      G   /usr/lib/xorg/Xorg                          137MiB |\n",
-      "|    0   N/A  N/A      1857      G   /usr/bin/gnome-shell                          6MiB |\n",
-      "|    1   N/A  N/A      1753      G   /usr/lib/xorg/Xorg                            4MiB |\n",
-      "|    1   N/A  N/A     45725      C   ...b/miniforge3/envs/llama3/bin/python    15830MiB |\n",
+      "|    0   N/A  N/A      1732      G   /usr/lib/xorg/Xorg                           85MiB |\n",
+      "|    0   N/A  N/A      1830      G   /usr/bin/gnome-shell                          4MiB |\n",
+      "|    1   N/A  N/A      1732      G   /usr/lib/xorg/Xorg                            4MiB |\n",
+      "|    1   N/A  N/A      6926      C   ...b/miniforge3/envs/llama3/bin/python    15830MiB |\n",
       "+---------------------------------------------------------------------------------------+\n"
      ]
     }
@@ -272,7 +208,26 @@
       "  warnings.warn(\n",
       "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "messages = [\n",
+    "    {\"role\": \"user\", \"content\": \"Who are you? Please, answer in pirate-speak.\"},\n",
+    "]\n",
+    "outputs = pipe(\n",
+    "    messages,\n",
+    "    max_new_tokens=256,\n",
+    "    do_sample=False,\n",
+    ")\n",
+    "\n",
+    "# 4.0s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -284,19 +239,11 @@
     }
    ],
    "source": [
-    "\n",
-    "messages = [\n",
-    "    {\"role\": \"user\", \"content\": \"Who are you? Please, answer in pirate-speak.\"},\n",
-    "]\n",
-    "outputs = pipe(\n",
-    "    messages,\n",
-    "    max_new_tokens=256,\n",
-    "    do_sample=False,\n",
-    ")\n",
     "assistant_response = outputs[0][\"generated_text\"][-1][\"content\"]\n",
     "print(assistant_response)\n",
     "# Arrrr, me hearty! Yer lookin' fer a bit o' information about meself, eh? Alright then, matey! I be a language-generatin' swashbuckler, a digital buccaneer with a penchant fer spinnin' words into gold doubloons o' knowledge! Me name be... (dramatic pause)...Assistant! Aye, that be me name, and I be here to help ye navigate the seven seas o' questions and find the hidden treasure o' answers! So hoist the sails and set course fer adventure, me hearty! What be yer first question?\n",
     "\n",
+    "# 0.0s\n",
     "# 4.0s"
    ]
   }
