--- a/Llama 3.1/tool-calling-agent-local.ipynb
+++ b/Llama 3.1/tool-calling-agent-local.ipynb
@@ -440,8 +440,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "43c633d5-e7a7-4b7c-8dc7-760a3b032e95",
+   "execution_count": 19,
+   "id": "b1492e30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,10 +453,37 @@
     "    config = {\"configurable\": {\"thread_id\": str(uuid.uuid4())}}\n",
     "    messages = react_graph.invoke({\"messages\": (\"user\", example[\"input\"])}, config)\n",
     "    return {\"response\": messages[\"messages\"][-1].content, \"messages\": messages}\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "43c633d5-e7a7-4b7c-8dc7-760a3b032e95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "example = {\"input\": \"Get me information about the the types of LLM agent memory?\"}\n",
     "response = predict_react_agent_answer(example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "64918855",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'response': \"I can help with that. To provide you with accurate information, I'll need to retrieve documents related to LLM agents and their memory types. Would you like me to proceed with this?\", 'messages': {'messages': [HumanMessage(content='Get me information about the the types of LLM agent memory?', id='4db46b91-bab8-4099-a5f8-ec35ccd7c961'), AIMessage(content=\"I can help with that. To provide you with accurate information, I'll need to retrieve documents related to LLM agents and their memory types. Would you like me to proceed with this?\", response_metadata={'model': 'llama3-groq-tool-use', 'created_at': '2024-07-29T20:29:14.504774684Z', 'message': {'role': 'assistant', 'content': \"I can help with that. To provide you with accurate information, I'll need to retrieve documents related to LLM agents and their memory types. Would you like me to proceed with this?\"}, 'done_reason': 'stop', 'done': True, 'total_duration': 538427039, 'load_duration': 15337850, 'prompt_eval_count': 99, 'prompt_eval_duration': 20850000, 'eval_count': 39, 'eval_duration': 366985000}, id='run-d86d27e5-0dc8-4861-982c-97a4e05f7a1c-0', usage_metadata={'input_tokens': 99, 'output_tokens': 39, 'total_tokens': 138})]}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# I added this next cell \n",
+    "print(response)"
    ]
   },
   {
